[gd_scene load_steps=6 format=3 uid="uid://bkc20x4kcb1av"]

[ext_resource type="Script" path="res://talk_system.gd" id="1_lqohc"]
[ext_resource type="Texture2D" uid="uid://bsarhcupsdmpj" path="res://group_qs/Colorful Keyboard Purple Orange.png" id="2_vhxof"]
[ext_resource type="FontFile" uid="uid://bxcnmly2qqkel" path="res://group_qs/OpenSans-VariableFont_wdth,wght.ttf" id="2_xsrak"]
[ext_resource type="Texture2D" uid="uid://cuymq41qagaq" path="res://group_qs/dsfg.png" id="3_uhsci"]
[ext_resource type="Texture2D" uid="uid://ceistnva6v0xr" path="res://group_qs/arrow.png" id="3_wjqxr"]

[node name="UI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 6
size_flags_vertical = 6
script = ExtResource("1_lqohc")

[node name="first" type="TextureButton" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -626.0
offset_top = -351.0
grow_horizontal = 0
grow_vertical = 0
texture_normal = ExtResource("2_vhxof")

[node name="Arrow" type="Sprite2D" parent="first"]
visible = false
position = Vector2(326, -43)
rotation = 1.5708
scale = Vector2(0.2, 0.238)
texture = ExtResource("3_wjqxr")

[node name="second" type="TextureButton" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -351.0
offset_right = 626.0
grow_vertical = 0
texture_normal = ExtResource("3_uhsci")

[node name="Arrow" type="Sprite2D" parent="second"]
visible = false
position = Vector2(326, -43)
rotation = 1.5708
scale = Vector2(0.2, 0.238)
texture = ExtResource("3_wjqxr")

[node name="dialog_sqr" type="ColorRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = 0.351562
anchor_top = 0.757716
anchor_right = 0.685765
anchor_bottom = 0.990741
offset_right = -3.05176e-05
offset_bottom = -1.66893e-05
grow_horizontal = 2
grow_vertical = 0
color = Color(0.203922, 0.203922, 0.203922, 1)
metadata/_edit_use_anchors_ = true

[node name="text" type="Label" parent="dialog_sqr"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.348684
anchor_right = 1.0
anchor_bottom = 0.651316
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.67451, 0.67451, 0.67451, 1)
theme_override_fonts/font = ExtResource("2_xsrak")
theme_override_font_sizes/font_size = 25
autowrap_mode = 3
text_direction = 2
language = "he"
metadata/_edit_use_anchors_ = true

[node name="dialog_sound" type="AudioStreamPlayer" parent="."]

[connection signal="mouse_entered" from="first" to="." method="_on_first_mouse_entered"]
[connection signal="pressed" from="first" to="." method="_on_first_pressed"]
[connection signal="pressed" from="second" to="." method="_on_second_pressed"]
